FIx container overflow

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -11,8 +11,8 @@ h2 {
   letter-spacing: 5px;
 }
 
-.columns {
-  width: 100%;
+.container {
+  overflow-x: hidden;
 }
 
 .project {
